--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: http://example.org/
+baseURL: https://zkl20020305.github.io/blog
 languageCode: en-us
 title: My New Hugo Site
 theme: "PaperMod"
